--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is a simple HTML page hosted with GitHub Pages. You can customize this page with your own content, styles, and images.</p>
+    <h1>Globion Scent Sample</h1>
+    <p>Sample for Berry Aldehydic</p>
     <hr>
 
 <div class="max-w-3xl w-full bg-white rounded-xl shadow-lg overflow-hidden md:flex">
