--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <h1>Globion Scent Sample</h1>
-    <p>Sample for Berry Aldehydic</p>
+    <p>Berry Aldehydic</p>
     <hr>
 
 <div class="max-w-3xl w-full bg-white rounded-xl shadow-lg overflow-hidden md:flex">
@@ -72,11 +72,6 @@
                     <li>Amber</li>
                 </ul>
             </div>
-        </div>
-    </div>
-    <div class="md:w-1/2 flex items-center justify-center p-8 bg-gradient-to-br from-gray-200 to-gray-300">
-        <div class="w-full h-full bg-gray-400 rounded-lg flex items-center justify-center">
-            <span class="text-white text-lg font-medium">Fragrance Visual</span>
         </div>
     </div>
 </div>
