--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <h1>Globion Scent Sample</h1>
-    <p>Berry Aldehydic</p>
+    <p>Berry Aldehydic      莓果醛香 </p>
     <hr>
 
 <div class="max-w-3xl w-full bg-white rounded-xl shadow-lg overflow-hidden md:flex">
@@ -70,6 +70,34 @@
                     <li>Cedarwood</li>
                     <li>Oak Moss</li>
                     <li>Amber</li>
+                </ul>
+            </div>
+        </div>
+        <div class="space-y-6">
+            <div class="bg-blue-50 p-6 rounded-xl shadow-inner">
+                <h2 class="text-xl font-semibold text-blue-800 mb-2">前调</h2>
+                <ul class="list-disc list-inside text-gray-700 space-y-1">
+                    <li>莓果</li>
+                    <li>醛香</li>
+                    <li>没药</li>
+                    <li>松针</li>
+                </ul>
+            </div>
+            <div class="bg-green-50 p-6 rounded-xl shadow-inner">
+                <h2 class="text-xl font-semibold text-green-800 mb-2">中调</h2>
+                <ul class="list-disc list-inside text-gray-700 space-y-1">
+                    <li>Fir 冷杉香脂</li>
+                    <li>丁香</li>
+                    <li>肉桂</li>
+                    <li>松树 / 桉树</li>
+                </ul>
+            </div>
+            <div class="bg-yellow-50 p-6 rounded-xl shadow-inner">
+                <h2 class="text-xl font-semibold text-yellow-800 mb-2">尾调</h2>
+                <ul class="list-disc list-inside text-gray-700 space-y-1">
+                    <li>雪松木</li>
+                    <li>橡木苔</li>
+                    <li>琥珀</li>
                 </ul>
             </div>
         </div>
