--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                 </ul>
             </div>
         </div>
-        <div class="space-y-6">
+     </div>
+     <div class="space-y-6">
             <div class="bg-blue-50 p-6 rounded-xl shadow-inner">
                 <h2 class="text-xl font-semibold text-blue-800 mb-2">前调</h2>
                 <ul class="list-disc list-inside text-gray-700 space-y-1">
