--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
             </div>
         </div>
      </div>
-     <div class="space-y-6">
-            <div class="bg-blue-50 p-6 rounded-xl shadow-inner">
+    <div class="md:w-1/2 flex items-center justify-center p-8 bg-gradient-to-br from-gray-200 to-gray-300">
+        <div class="w-full h-full bg-gray-400 rounded-lg flex items-center justify-center">
+           <div class="space-y-6">
+              <div class="bg-blue-50 p-6 rounded-xl shadow-inner">
                 <h2 class="text-xl font-semibold text-blue-800 mb-2">前调</h2>
                 <ul class="list-disc list-inside text-gray-700 space-y-1">
                     <li>莓果</li>
@@ -83,8 +85,8 @@
                     <li>没药</li>
                     <li>松针</li>
                 </ul>
-            </div>
-            <div class="bg-green-50 p-6 rounded-xl shadow-inner">
+               </div>
+               <div class="bg-green-50 p-6 rounded-xl shadow-inner">
                 <h2 class="text-xl font-semibold text-green-800 mb-2">中调</h2>
                 <ul class="list-disc list-inside text-gray-700 space-y-1">
                     <li>Fir 冷杉香脂</li>
@@ -92,15 +94,15 @@
                     <li>肉桂</li>
                     <li>松树 / 桉树</li>
                 </ul>
-            </div>
-            <div class="bg-yellow-50 p-6 rounded-xl shadow-inner">
+               </div>
+               <div class="bg-yellow-50 p-6 rounded-xl shadow-inner">
                 <h2 class="text-xl font-semibold text-yellow-800 mb-2">尾调</h2>
                 <ul class="list-disc list-inside text-gray-700 space-y-1">
                     <li>雪松木</li>
                     <li>橡木苔</li>
                     <li>琥珀</li>
                 </ul>
-            </div>
+               </div>
         </div>
     </div>
 </div>
