--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             </div>
         </div>
      </div>
-    <div class="md:w-1/2 flex items-center justify-center p-8 bg-gradient-to-br from-gray-200 to-gray-300">
-        <div class="w-full h-full bg-gray-400 rounded-lg flex items-center justify-center">
+    <div class="max-w-3xl w-full bg-white rounded-xl shadow-lg overflow-hidden md:flex">
+        <div class="md:w-1/2 p-8 flex flex-col justify-cente">
            <div class="space-y-6">
               <div class="bg-blue-50 p-6 rounded-xl shadow-inner">
                 <h2 class="text-xl font-semibold text-blue-800 mb-2">前调</h2>
