--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
      </div>
     <div class="max-w-3xl w-full bg-white rounded-xl shadow-lg overflow-hidden md:flex">
-        <!div class="md:w-1/2 p-8 flex flex-col justify-cente">
+        <div class="md:w-1/2 p-8 flex flex-col justify-cente">
            <div class="space-y-6">
               <div class="bg-blue-50 p-6 rounded-xl shadow-inner">
                 <h2 class="text-xl font-semibold text-blue-800 mb-2">前调</h2>
@@ -104,7 +104,7 @@
                 </ul>
                </div>
              </div>
-         <!/div>
+         </div>
     </div>
 </div>
 
