--- a/index.html
+++ b/index.html
@@ -1,112 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Integrated Website</title>
-
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f7fafc;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bilingual Layout</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #f7fafc;
+    }
+  </style>
 </head>
-<body class="bg-gray-100 flex flex-col items-center justify-center min-h-screen p-4">
+<body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
+  <div class="grid grid-cols-2 gap-8 max-w-6xl w-full">
+    <!-- English Column -->
+    <div class="space-y-6">
+      <h1 class="text-2xl font-bold text-gray-800">Globion Scent Sample</h1>
+      <p class="text-lg">Berry Aldehydic</p>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-        h1 {
-            color: #2c3e50;
-        }
-        p {
-            font-size: 18px;
-        }
-    </style>
-</head>
-<body>
-    <h1>Globion Scent Sample</h1>
-    <p>Berry Aldehydic      莓果醛香 </p>
-    <hr>
+      <div class="bg-blue-50 p-6 rounded-xl shadow-inner">
+        <h2 class="text-xl font-semibold text-blue-800 mb-2">Top Notes</h2>
+        <ul class="list-disc list-inside text-gray-700 space-y-1">
+          <li>Berry</li>
+          <li>Aldehydic</li>
+          <li>Galbanum</li>
+          <li>Pine Needle</li>
+        </ul>
+      </div>
 
-<div class="max-w-3xl w-full bg-white rounded-xl shadow-lg overflow-hidden md:flex">
-    <div class="md:w-1/2 p-8 flex flex-col justify-center">
+      <div class="bg-green-50 p-6 rounded-xl shadow-inner">
+        <h2 class="text-xl font-semibold text-green-800 mb-2">Middle Notes</h2>
+        <ul class="list-disc list-inside text-gray-700 space-y-1">
+          <li>Fir Balsam</li>
+          <li>Clove</li>
+          <li>Cinnamon</li>
+          <li>Pine / Eucalyptus</li>
+        </ul>
+      </div>
 
-        <div class="space-y-6">
-            <div class="bg-blue-50 p-6 rounded-xl shadow-inner">
-                <h2 class="text-xl font-semibold text-blue-800 mb-2">Top Notes</h2>
-                <ul class="list-disc list-inside text-gray-700 space-y-1">
-                    <li>Berry</li>
-                    <li>Aldehydic</li>
-                    <li>Galbanum</li>
-                    <li>Pine Needle</li>
-                </ul>
-            </div>
-            <div class="bg-green-50 p-6 rounded-xl shadow-inner">
-                <h2 class="text-xl font-semibold text-green-800 mb-2">Middle Notes</h2>
-                <ul class="list-disc list-inside text-gray-700 space-y-1">
-                    <li>Fir Balsam</li>
-                    <li>Clove</li>
-                    <li>Cinnamon</li>
-                    <li>Pine / Eucalyptus</li>
-                </ul>
-            </div>
-            <div class="bg-yellow-50 p-6 rounded-xl shadow-inner">
-                <h2 class="text-xl font-semibold text-yellow-800 mb-2">End Notes</h2>
-                <ul class="list-disc list-inside text-gray-700 space-y-1">
-                    <li>Cedarwood</li>
-                    <li>Oak Moss</li>
-                    <li>Amber</li>
-                </ul>
-            </div>
-        </div>
-     </div>
-    <div class="max-w-3xl w-full bg-white rounded-xl shadow-lg overflow-hidden md:flex">
-        <div class="md:w-1/2 p-8 flex flex-col justify-cente">
-           <div class="space-y-6">
-              <div class="bg-blue-50 p-6 rounded-xl shadow-inner">
-                <h2 class="text-xl font-semibold text-blue-800 mb-2">前调</h2>
-                <ul class="list-disc list-inside text-gray-700 space-y-1">
-                    <li>莓果</li>
-                    <li>醛香</li>
-                    <li>没药</li>
-                    <li>松针</li>
-                </ul>
-               </div>
-               <div class="bg-green-50 p-6 rounded-xl shadow-inner">
-                <h2 class="text-xl font-semibold text-green-800 mb-2">中调</h2>
-                <ul class="list-disc list-inside text-gray-700 space-y-1">
-                    <li>Fir 冷杉香脂</li>
-                    <li>丁香</li>
-                    <li>肉桂</li>
-                    <li>松树 / 桉树</li>
-                </ul>
-               </div>
-               <div class="bg-yellow-50 p-6 rounded-xl shadow-inner">
-                <h2 class="text-xl font-semibold text-yellow-800 mb-2">尾调</h2>
-                <ul class="list-disc list-inside text-gray-700 space-y-1">
-                    <li>雪松木</li>
-                    <li>橡木苔</li>
-                    <li>琥珀</li>
-                </ul>
-               </div>
-             </div>
-         </div>
+      <div class="bg-yellow-50 p-6 rounded-xl shadow-inner">
+        <h2 class="text-xl font-semibold text-yellow-800 mb-2">End Notes</h2>
+        <ul class="list-disc list-inside text-gray-700 space-y-1">
+          <li>Cedarwood</li>
+          <li>Oak Moss</li>
+          <li>Amber</li>
+        </ul>
+      </div>
     </div>
-</div>
 
+    <!-- Chinese Column -->
+    <div class="space-y-6">
+      <h1 class="text-2xl font-bold text-gray-800">Globion 香氛示例</h1>
+      <p class="text-lg">莓果醛香</p>
+
+      <div class="bg-blue-50 p-6 rounded-xl shadow-inner">
+        <h2 class="text-xl font-semibold text-blue-800 mb-2">前调</h2>
+        <ul class="list-disc list-inside text-gray-700 space-y-1">
+          <li>莓果</li>
+          <li>醛香</li>
+          <li>没药</li>
+          <li>松针</li>
+        </ul>
+      </div>
+
+      <div class="bg-green-50 p-6 rounded-xl shadow-inner">
+        <h2 class="text-xl font-semibold text-green-800 mb-2">中调</h2>
+        <ul class="list-disc list-inside text-gray-700 space-y-1">
+          <li>冷杉香脂</li>
+          <li>丁香</li>
+          <li>肉桂</li>
+          <li>松树 / 桉树</li>
+        </ul>
+      </div>
+
+      <div class="bg-yellow-50 p-6 rounded-xl shadow-inner">
+        <h2 class="text-xl font-semibold text-yellow-800 mb-2">尾调</h2>
+        <ul class="list-disc list-inside text-gray-700 space-y-1">
+          <li>雪松木</li>
+          <li>橡木苔</li>
+          <li>琥珀</li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
