--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
     }
   </style>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
+<body class="bg-gray-100 flex flex-col items-center justify-center min-h-screen p-4">
+  <!-- Centered Title -->
+  <div class="text-center mb-8">
+    <h1 class="text-3xl font-bold text-gray-800">Globion Scent Sample</h1>
+    <p class="text-lg text-gray-600">Berry Aldehydic</p>
+  </div>
+
   <div class="grid grid-cols-2 gap-8 max-w-6xl w-full">
     <!-- English Column -->
     <div class="space-y-6">
-      <h1 class="text-2xl font-bold text-gray-800">Globion Scent Sample</h1>
-      <p class="text-lg">Berry Aldehydic</p>
-
       <div class="bg-blue-50 p-6 rounded-xl shadow-inner">
         <h2 class="text-xl font-semibold text-blue-800 mb-2">Top Notes</h2>
         <ul class="list-disc list-inside text-gray-700 space-y-1">
@@ -52,9 +55,6 @@
 
     <!-- Chinese Column -->
     <div class="space-y-6">
-      <h1 class="text-2xl font-bold text-gray-800">Globion 香氛示例</h1>
-      <p class="text-lg">莓果醛香</p>
-
       <div class="bg-blue-50 p-6 rounded-xl shadow-inner">
         <h2 class="text-xl font-semibold text-blue-800 mb-2">前调</h2>
         <ul class="list-disc list-inside text-gray-700 space-y-1">
